# File-Extraction

./: create_test_files.py  extracted_content.txt  feishu_main.py  file_utils.py  main.py  pyproject.toml  测试文档.pptx  测试文档.xls
backend/: feishu_main.py  main.py  server.py
datadb/: 测试文档.docx  测试文档.txt  测试文档.xlsx
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  style.css
scripts/: create_test_files.py
utils/: file_utils.py
